# plezy

./: .dockerignore  .gitignore  .jscpd.json  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  PLEX_API_ANALYSIS.md  PLEX_API_FIXES.md  PRIVACY.md  README.md  SYNCING.md  analysis_options.yaml  appcast.xml  pubspec.yaml  slang.yaml  sonar-project.properties
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-apple-tv.yml  build.yml  ci.yml  release.yml  sonar.yml  update-cask.yml  (+1 more)
Casks/: plezy.rb  vibe_stream.rb
android/: settings.gradle.kts
android/libass/src/main/cpp/: AssKt.c  CMakeLists.txt  FetchLibass.cmake  SurfaceTxProbe.c
apple-tv/: Package.resolved  Package.swift  generate-xcode-project.sh  project.yml
ios/: Podfile
lib/: main.dart  main_web.dart  windows_native_window_state.dart
linux/: AppImageBuilder.yml  CMakeLists.txt  com.edde746.plezy.desktop  com.edde746.plezy.metainfo.xml  com.edde746.plezy.yml
maestro/: auth.yaml  screenshots.yaml
scripts/: android_screenshots.sh  build_steam.sh  build_webos.sh  bundle_steam.sh  ci_checks.sh  deploy.sh  gen_framesync_sample.sh  generate_android_icons.sh  generate_ducet_ranks.dart  install-pre-commit-hook.sh  ios_screenshots.sh  pre-commit  release.sh  screenshot_common.sh  steam.Dockerfile  steam_deploy.sh  sync_changelogs.sh  upload-symbols.ps1  upload-symbols.sh
server/: Caddyfile  Dockerfile  deploy.sh  docker-compose.yml  go.mod  go.sum  main.go  main_test.go
test/: README.md  security_test.dart
tizen/: App.cs  Runner.csproj  TizenMediaPlayer.cs  TizenWindowManager.cs  tizen-manifest.xml
tvos/: .gitignore  CODE_REVIEW.md  Podfile  README.md  SETUP.md  TROUBLESHOOTING.md  engine.version  setup-xcode.sh
web/: flutter_bootstrap.js  index.html  manifest.json
webos/: appinfo.json
website/: vite.config.ts
windows/: CMakeLists.arm64.txt  CMakeLists.txt  build-installer-arm64.ps1  build-installer.ps1  native_window_state_plugin.cpp  native_window_state_plugin.h
(+1629 files in other folders)
